# PhysXSharp

./: .gitignore  .gitmodules  README.md
.github/workflows/: ccpp.yml
MeshUtility/: CMakeLists.txt  main.cpp  main.h
PhysXSharp/: PhysXSharp.sln
PhysXSharp/PhysXSharp/: IPhysXSharpNative.cs  PhysXSharp.csproj
PhysXSharp/PhysXSharp/PhysX/: PxPointerRef.cs  PxVec3.cs
PhysXSharpNative/: CMakeLists.txt  CMakeSettings.json
PhysXSharpNative/PhysXSharpNative/: CMakeLists.txt  PhysXSharpNative.cpp  PhysXSharpNative.h
Prebuilt/physx3.4_win64/: LowLevel.lib  LowLevelAABB.lib  LowLevelAABBCHECKED.lib  LowLevelAABBPROFILE.lib  LowLevelCHECKED.lib  LowLevelCloth.lib  LowLevelClothCHECKED.lib  LowLevelClothPROFILE.lib  LowLevelDynamics.lib  LowLevelDynamicsCHECKED.lib  LowLevelDynamicsPROFILE.lib  LowLevelPROFILE.lib  LowLevelParticles.lib  LowLevelParticlesCHECKED.lib  LowLevelParticlesPROFILE.lib  PhysX3CHECKED_x64.exp  PhysX3CHECKED_x64.lib  PhysX3CharacterKinematicCHECKED_x64.exp  PhysX3CharacterKinematicCHECKED_x64.lib  PhysX3CharacterKinematicCHECKED_x64.map  PhysX3CharacterKinematicPROFILE_x64.lib  PhysX3CharacterKinematic_x64.exp  PhysX3CharacterKinematic_x64.lib  PhysX3CharacterKinematic_x64.map  PhysX3CommonCHECKED_x64.exp  PhysX3CommonCHECKED_x64.lib  PhysX3CommonCHECKED_x64.map  PhysX3CommonPROFILE_x64.lib  PhysX3Common_x64.exp  PhysX3Common_x64.lib  PhysX3Common_x64.map  PhysX3CookingCHECKED_x64.exp  PhysX3CookingCHECKED_x64.lib  PhysX3CookingCHECKED_x64.map  PhysX3CookingPROFILE_x64.lib  PhysX3Cooking_x64.exp  PhysX3Cooking_x64.lib  PhysX3Cooking_x64.map  PhysX3PROFILE_x64.lib  PhysX3_x64.exp  (+20 more)
Prebuilt/physx4.1_win64/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.exp  PhysXCommon_64.lib  PhysXCommon_64.map  PhysXCooking_64.exp  PhysXCooking_64.lib  PhysXCooking_64.map  PhysXFoundation_64.exp  PhysXFoundation_64.lib  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysX_64.exp  PhysX_64.lib  PhysX_64.map  SceneQuery_static_64.lib
